--- a/index.html
+++ b/index.html
@@ -6,8 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+<link rel="stylesheet" href="assets/css/style.css">
+
+
 </head>
 <body>
+
+
+<header>
+header
+</header>
+
+
+<main>
+    main
+
+
+</main>
+
+
+<footer>
+pie
+
+</footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
     <div class="container">
         <div class="row">
             <table class="table">
