--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
 
       </article>
 
-
+<div class="text-center" id="encontrado">Super Heroe Encontrado</div>
 
 <article class="row">
-<div>ficha</div>
-<div>Grafico</div>
+<div id="ficha">ficha</div>
+<div id="chartContainer"></div>
 
   
 
@@ -112,31 +112,7 @@
 
 
 
-  <div class="container">
-    <div class="row">
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">email</th>
-            <th scope="col">avatar</th>
-          </tr>
-        </thead>
-        <tbody>
-
-        </tbody>
-      </table>
-      <nav aria-label="Page navigation example">
-        <ul class="pagination">
-
-        </ul>
-      </nav>
-
-    </div>
-    <div id="chartContainer" style="height: 300px; width: 100%;"></div>
-  </div>
+  
   <script src="assets/js/jquery-3.6.0.min.js"></script>
   <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
