--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="assets/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link href="assets/css/all.css" rel="stylesheet"> <!-- Fontawesome 5.9.0 + carpeta assets/webfonts -->
   <link rel="icon" href="assets/img/favicon.ico" type="image/png">
 </head>
 
@@ -73,8 +74,8 @@
       
 
       <article class="row d-inline-flex mt-5">
-        <div class="text-center mt-5 col-12" id="encontrado">Super Heroe Encontrado</div>
-        <div id="ficha" class="col-12 col-md-6"></div>
+        <div class="text-center mt-5 col-12" id="encontrado"></div>
+        <div id="ficha" class="col-12 col-md-6" ></div>
 
         
         <div id="chartContainer" class="card mb-3 bg-dark text-white col-12 col-md-6" style="width: 100%;"></div>
@@ -90,18 +91,26 @@
 
   </main>
 
+  <footer>
+    <div class="row mt-5">
 
+      <div class="col-6 col-md-6 text-center">
 
+        <p> SuperHero </p>
+      </div>
 
+      <div class="col-6 col-md-6 text-center">
 
+        <p class="iconos">
 
+          <a href="http://www.github.com" target="_blank"><i class="fab fa-github mr-2"></i></a>
+          <a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter-square mr-2"></i></a>
+          <a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook-square "></i></a>
+        </p>
 
-
-
-
-
-
-
+      </div>
+    </div>
+  </footer>
 
 
 
